<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eddie.taquin.RulesActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/rulesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesTitle"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/objectivs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectivs"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/objectivsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectivsText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toRightOf="@+id/objectivs"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/rulesImage1"
        android:layout_width="310dp"
        android:layout_height="443dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rulesimage1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="311dp"
        android:layout_height="131dp"
        android:text="@string/rulesText"
        android:layout_marginRight="8dp"
        android:textSize="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rulesImage1"
        android:layout_marginTop="315dp" />

</android.support.constraint.ConstraintLayout>
